Fixes #30
+ Replace Salts logo with Coca Cola Enterprises logo
+ Technology Section Desktop : resizing browser messes up logo location.
+ Technology Section Mobile : 1. Logo is messed up 2. reduce top/bottom padding to something smaller
+ Codio : vertically center the quote
+ Cross Platform : reduce top and bottonm padding quite a lot for mobile (padding 40px 20px for mobile almost site wide)
+ MEA : vertically center quote
+ Team : make team names brighter so they stand out more
+ Team : make sure there is some padding on right and left of team textbox when browser gets smaller
+ Team : change Pavel S. to Pavel
+ NetVentures : vertically center quote and the logo
+ Footer - remove the 'Â' symbol in the footer Copyright Â© 2013 Crafted.io. All

--- a/less/basics/body.less
+++ b/less/basics/body.less
@@ -15,6 +15,12 @@ a, a:hover, a:active, a:focus {
   min-height: 390px;
 }
 
+.mobile-page {
+  @media @smallTablet, @tablet {
+    padding: 40px 20px;
+  }
+}
+
 .clear {
   *zoom: 1;
 
@@ -172,9 +178,9 @@ blockquote {
 
 }
 
-.shade (@radius: 10px, @color: #000) {
+.shade (@radius: 10px, @color: #000, @opacity: 0.7) {
   background-color: @color;
-  opacity: 0.7;
+  opacity: @opacity;
   border-radius: @radius;
   width: 100%;
   height: 100%;
