--- a/less/pages/responsive.less
+++ b/less/pages/responsive.less
@@ -4,13 +4,16 @@ section#responsive {
     background: url(../img/responsive_bg.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     background-size: cover;
-    padding: 110px 10px 155px;
+    padding: 90px 20px;
+
+    .mobile-page
   }
 
   .overview {
     position: relative;
     padding: 24px 0 36px 40px;
     z-index: 1;
+
     .shade {
       .shade(35px);
     }
@@ -27,11 +30,15 @@ section#responsive {
 
 
     @media @smallTablet, @tablet {
+      padding: 20px;
+
       .content {
         width: 100%;
       }
       img {
         padding: 0;
+        width: 100%;
+        max-width: 318px;
         float: none;
         margin: auto;
         display: block;
